k8s2/web-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend-deployment
  namespace: mini-shoping
  labels:
    app: web-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  web-frontend
  template:
    metadata:
      labels:
        app: web-frontend
    spec:
      containers:
      - name:  web-frontend
        image: web-frontend:latest
        ports:
        - containerPort: 3002
