k8s2/web-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  namespace: mini-shoping
spec:
  selector:
    app: web-frontend
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
